--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center>
-        <h2>Hello to Githu pages</h2>
+        <h2>Hello to Github pages</h2>
         <p>just for test</p>
         <p>Hello</p>
         <p>Bye, Bye...</p>
